--- a/DisableDoubleTap/DisableDoubleTap.csproj
+++ b/DisableDoubleTap/DisableDoubleTap.csproj
@@ -61,6 +61,9 @@
     <Reference Include="ResoniteModLoader">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Resonite\Libraries\ResoniteModLoader.dll</HintPath>
     </Reference>
+    <Reference Include="ResoniteModSettings">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Resonite\rml_mods\ResoniteModSettings.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
